// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LocationField/Desktop Context AutoFocusWithMultipleControls smoke-test 1`] = `
<div>
  <input id="example"
         value="Enter text"
  >
  <button type="button">
    Click me!
  </button>
  <div class="styled__InputGroup-sc-xahsq2-7 erfoji"
       role="group"
  >
    <button aria-controls="from-listbox"
            aria-expanded="false"
            aria-label="Toggle displaying the list of suggested locations"
            tabindex="-1"
            type="button"
            class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
    >
      <svg viewbox="0 0 512 512"
           height="13"
           width="13"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
      >
        <path fill="currentColor"
              d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
        >
        </path>
      </svg>
    </button>
    <input aria-autocomplete="list"
           aria-controls="from-listbox"
           aria-expanded="false"
           aria-haspopup="listbox"
           aria-invalid="false"
           aria-label="Select from location"
           aria-required="false"
           class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
           spellcheck="false"
           placeholder="Select from location"
           role="combobox"
           value
    >
    <span role="status"
          class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
    >
    </span>
    <ul aria-hidden="true"
        aria-label="Suggested locations"
        id="from-listbox"
        role="listbox"
        class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
    >
    </ul>
  </div>
</div>
`;

exports[`LocationField/Desktop Context Blank smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context GeocoderNoResults smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context GeocoderUnreachable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context HereGeocoder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context LocationUnavailable smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context NoAutoFocusWithMultipleControls smoke-test 1`] = `
<div>
  <input id="example"
         value="Enter text"
  >
  <button type="button">
    Click me!
  </button>
  <div class="styled__InputGroup-sc-xahsq2-7 erfoji"
       role="group"
  >
    <button aria-controls="from-listbox"
            aria-expanded="false"
            aria-label="Toggle displaying the list of suggested locations"
            tabindex="-1"
            type="button"
            class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
    >
      <svg viewbox="0 0 512 512"
           height="13"
           width="13"
           aria-hidden="true"
           focusable="false"
           fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
           class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
      >
        <path fill="currentColor"
              d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
        >
        </path>
      </svg>
    </button>
    <input aria-autocomplete="list"
           aria-controls="from-listbox"
           aria-expanded="false"
           aria-haspopup="listbox"
           aria-invalid="false"
           aria-label="Select from location"
           aria-required="false"
           class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
           spellcheck="false"
           placeholder="Select from location"
           role="combobox"
           value
    >
    <span role="status"
          class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
    >
    </span>
    <ul aria-hidden="true"
        aria-label="Suggested locations"
        id="from-listbox"
        role="listbox"
        class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
    >
    </ul>
  </div>
</div>
`;

exports[`LocationField/Desktop Context RequiredAndInvalidState smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="true"
         aria-label="Select from location"
         aria-required="true"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SelectedLocation smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 320 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3l105.4 105.3c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256l105.3-105.4z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SelectedLocationCustomClear smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="to-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 384 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__ToIcon-sc-n5xcvc-2 gZxRwk"
    >
      <path fill="currentColor"
            d="M215.7 499.2C267 435 384 279.4 384 192 384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2 12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64 64 28.7 64 64-28.7 64-64 64z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="to-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="to"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP to-form-control"
         spellcheck="false"
         placeholder="to"
         role="combobox"
         value="123 Main St"
  >
  <button aria-label="Clear location"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__ClearButton-sc-xahsq2-2 hoozke cCkuXw"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
    >
      <path fill="currentColor"
            d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
      >
      </path>
    </svg>
  </button>
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="to-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context SlowGeocoder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithBadApiKeyHandlesBadAutocomplete smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithCustomResultColorsAndIcons smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithCustomResultsOrder smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="false"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Other
    </h2>
    <li aria-live="off"
        id="geocoder-way/555892536"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-example_layer">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods that is far away, but prioritized
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-node/5662026889"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-venue">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods Market
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Broadway, First Hill, Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-node/1934511929"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-address">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          2200 Westlake Avenue
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Downtown Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iCLOrV">
      Stations
    </h2>
    <li aria-live="off"
        id="geocoder-TL_US::Sound-Transit::stations"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-sound-transit source-transit layer-stations">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: navy;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Union Station (Sound Transit Stop)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 doQAFb">
      Stops
    </h2>
    <li aria-live="off"
        id="geocoder-5::WA-State-Ferry::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-wa-state-ferry source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Clinton (WA State Ferry Stop)
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Clinton Ferry Pier
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Another label
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Really just way too long a name I mean this name is just unconscionably long! Who would possibly approve a stop name this long
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-1::Community-Transit::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 27th Ave NE (Community Transit Stop ID 1)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-7::Community-Transit::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 23rd Ave NE (Community Transit Stop ID 7)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithPrefilledSearch smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="true"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="true"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="false"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iCLOrV">
      Stations
    </h2>
    <li aria-live="off"
        id="geocoder-TL_US::Sound-Transit::stations"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-sound-transit source-transit layer-stations">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: navy;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Union Station (Sound Transit Stop)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 doQAFb">
      Stops
    </h2>
    <li aria-live="off"
        id="geocoder-5::WA-State-Ferry::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-wa-state-ferry source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Clinton (WA State Ferry Stop)
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Clinton Ferry Pier
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Another label
          </span>
          <span class="styled__OptionAltLabel-sc-xahsq2-12 ddpEwP">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Really just way too long a name I mean this name is just unconscionably long! Who would possibly approve a stop name this long
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-1::Community-Transit::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 27th Ave NE (Community Transit Stop ID 1)
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-7::Community-Transit::stops"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL operator-community-transit source-transit layer-stops">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe"
              style="color: purple;"
        >
          <svg viewbox="0 0 512 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M256 0c134.4 0 224 35.2 224 80v48c17.7 0 32 14.3 32 32v64c0 17.7-14.3 32-32 32v160c0 17.7-14.3 32-32 32v32c0 17.7-14.3 32-32 32h-32c-17.7 0-32-14.3-32-32v-32H160v32c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32v-32c-17.7 0-32-14.3-32-32V256c-17.7 0-32-14.3-32-32v-64c0-17.7 14.3-32 32-32V80c0-44.8 89.6-80 224-80zM96 160v96c0 17.7 14.3 32 32 32h112V128H128c-17.7 0-32 14.3-32 32zm176 128h112c17.7 0 32-14.3 32-32v-96c0-17.7-14.3-32-32-32H272v160zM112 400c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zM352 80c0-8.8-7.2-16-16-16H176c-8.8 0-16 7.2-16 16s7.2 16 16 16h160c8.8 0 16-7.2 16-16z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Marine Dr NE &amp; 23rd Ave NE (Community Transit Stop ID 7)
        </span>
      </span>
    </li>
    <h2 class="styled__MenuGroupHeader-sc-xahsq2-8 iDacNN">
      Other
    </h2>
    <li aria-live="off"
        id="geocoder-way/555892536"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-example_layer">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods that is far away, but prioritized
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-node/5662026889"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-venue">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Whole Foods Market
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Broadway, First Hill, Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="geocoder-node/1934511929"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL source-openstreetmap layer-address">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 320 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M320 144c0 79.5-64.5 144-144 144S32 223.5 32 144 96.5 0 176 0s144 64.5 144 144zM176 80c8.8 0 16-7.2 16-16s-7.2-16-16-16c-53 0-96 43-96 96 0 8.8 7.2 16 16 16s16-7.2 16-16c0-35.3 28.7-64 64-64zm-32 400V317.1a177.984 177.984 0 0 0 64 0V480c0 17.7-14.3 32-32 32s-32-14.3-32-32z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          2200 Westlake Avenue
          <span class="styled__OptionSubTitle-sc-xahsq2-11 hMeBym">
            <span class="styled__HiddenContent-sc-xahsq2-0 iCqxXz">
              ,
            </span>
            Downtown Seattle, WA
          </span>
        </span>
      </span>
    </li>
    <li aria-live="off"
        id="current-position"
        role="option"
        aria-selected="false"
        tabindex="-1"
        class="styled__MenuItemLi-sc-xahsq2-9 eJoDhM"
    >
      <span class="styled__OptionContainer-sc-xahsq2-10 jVmFDL">
        <span class="styled__OptionIconContainer-sc-xahsq2-14 gBvsQe">
          <svg viewbox="0 0 448 512"
               height="13"
               width="13"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-sc-ea9ulj-0 ebjPRL"
          >
            <path fill="currentColor"
                  d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8S32.7 256 48 256h176v176c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
            >
            </path>
          </svg>
        </span>
        <span class="styled__OptionContent-sc-xahsq2-13 kWmkIl">
          Use Current Location
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`LocationField/Desktop Context WithUserSettings smoke-test 1`] = `
<div class="styled__InputGroup-sc-xahsq2-7 erfoji"
     role="group"
>
  <button aria-controls="from-listbox"
          aria-expanded="false"
          aria-label="Toggle displaying the list of suggested locations"
          tabindex="-1"
          type="button"
          class="styled__BaseButton-sc-xahsq2-1 styled__DropdownButton-sc-xahsq2-4 hoozke dYRKXf"
  >
    <svg viewbox="0 0 512 512"
         height="13"
         width="13"
         aria-hidden="true"
         focusable="false"
         fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
         class="StyledIconBase-sc-ea9ulj-0 ebjPRL styled__FromIcon-sc-n5xcvc-0 dDqEuj"
    >
      <path fill="currentColor"
            d="M160 256c0-53.9 42.1-96 96-96 53 0 96 42.1 96 96 0 53-43 96-96 96-53.9 0-96-43-96-96zm352 0c0 141.4-114.6 256-256 256S0 397.4 0 256 114.6 0 256 0s256 114.6 256 256zM256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
      >
      </path>
    </svg>
  </button>
  <input aria-autocomplete="list"
         aria-controls="from-listbox"
         aria-expanded="false"
         aria-haspopup="listbox"
         aria-invalid="false"
         aria-label="Select from location"
         aria-required="false"
         class="styled__Input-sc-xahsq2-6 axlAP from-form-control"
         spellcheck="false"
         placeholder="Select from location"
         role="combobox"
         value
  >
  <span role="status"
        class="styled__HiddenContent-sc-xahsq2-0 iCqxXz"
  >
  </span>
  <ul aria-hidden="true"
      aria-label="Suggested locations"
      id="from-listbox"
      role="listbox"
      class="styled__MenuItemList-sc-xahsq2-5 eCrJvo"
  >
  </ul>
</div>
`;
